--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,11 @@ pre-commit = "^3.4.0"
 flake8 = "^6.1.0"
 black = "^23.9.1"
 
+
+[tool.poetry.group.doc.dependencies]
+sphinx = "^6.2.1"
+sphinx-rtd-theme = "^1.3.0"
+
 [tool.black]
 line-length = 88
 exclude = '''
