--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ black = "^23.9.1"
 [tool.poetry.group.doc.dependencies]
 sphinx = "^6.2.1"
 sphinx-rtd-theme = "^1.3.0"
+sphinx-autodoc-typehints = "^1.22"
 
 [tool.black]
 line-length = 88
