--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,11 +25,12 @@ classifiers=[
 
 [tool.poetry.dependencies]
 python = "^3.8.1"
-pre-commit = "^3.4.0"
 
 [tool.poetry.group.dev.dependencies]
+pre-commit = "^3.4.0"
 flake8 = "^6.1.0"
 black = "^23.9.1"
+coverage = "^7.3.1"
 
 
 [tool.poetry.group.doc.dependencies]
