--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ classifiers=[
     'Topic :: Scientific/Engineering :: Artificial Intelligence',
     'Programming Language :: Python :: 3',
 ]
+packages = [{include = "rules_extraction"}]
 
 [tool.poetry.dependencies]
 python = "^3.8.1"
