--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -41,14 +41,14 @@ jobs:
       - name: Build binary wheel and source tarball 🔨
         run: poetry build
 
-      - name: Publish distribution 📦 to Test PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-          repository-url: https://test.pypi.org/legacy/
-
-#      - name: Publish distribution 📦 to PyPI
-#        if: github.event_name == 'release' && github.event.release.target_commitish == 'main'
+#      - name: Publish distribution 📦 to Test PyPI
 #        uses: pypa/gh-action-pypi-publish@release/v1
 #        with:
-#          password: ${{ secrets.PYPI_API_TOKEN }}
+#          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+#          repository-url: https://test.pypi.org/legacy/
+
+      - name: Publish distribution 📦 to PyPI
+        if: github.event_name == 'release' && github.event.release.target_commitish == 'main'
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          password: ${{ secrets.PYPI_API_TOKEN }}
