--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ python = "^3.8.1"
 numpy = "^1.17.4"
 pandas = "2.0.3"
 scikit-learn = "^1.3.0"
+torch = "2.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.4.0"
