--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,9 @@ python = "^3.8.1"
 numpy = "^1.17.4"
 pandas = "2.0.3"
 scikit-learn = "^1.3.0"
-torch = "2.0.1"
+jupyter = "^1.0.0"
+torch = "^2.0.1"
+torchvision = "^0.15.2"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.4.0"
