--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ python = "^3.8.1"
 numpy = "^1.17.4"
 pandas = "2.0.3"
 scikit-learn = "^1.3.0"
-torch = "2.0.1"
+torch = { version = "2.0.1", source = "torch" }
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.4.0"
@@ -42,6 +42,11 @@ coverage = "^7.3.1"
 sphinx = "^6.2.1"
 sphinx-rtd-theme = "^1.3.0"
 sphinx-autodoc-typehints = "^1.22"
+
+[[tool.poetry.source]]
+name = "torch"
+url = "https://download.pytorch.org/whl/cu117"
+priority = "supplemental"
 
 [tool.black]
 line-length = 88
