--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ numpy = "^1.17.4"
 pandas = "2.0.3"
 scikit-learn = "^1.3.0"
 torch = { version = "2.0.1", source = "torch" }
+torchvision = "^0.15.2"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.4.0"
