--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ pandas = "2.0.3"
 scikit-learn = "^1.3.0"
 torch = { version = "2.0.1", source = "torch" }
 torchvision = "^0.15.2"
+matplotlib = "3.7.3"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.4.0"
