--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Arthur Babey <arthur.babey@heig-vd.ch>"]
 license = "3-Clause BSD License"
 readme = "README.md"
 homepage = "https://hes-xplain.github.io/"
-repository = "https://github.com/HES-XPLAIN/mlxplain"
+repository = "https://github.com/HES-XPLAIN/rules-extraction"
 keywords = ["machine learning", "xai"]
 classifiers=[
     'Operating System :: Microsoft :: Windows',
@@ -27,8 +27,8 @@ packages = [{include = "rules_extraction"}]
 [tool.poetry.dependencies]
 python = "^3.8.1"
 numpy = "^1.17.4"
-pandas = "2.0.3"
-scikit-learn = "^1.3.0"
+pandas = "2.0.3"        # >= 2.1 requires Python 3.9
+scikit-learn = "^1.1.3"
 torch = { version = "2.0.1", source = "torch" }
 torchvision = "^0.15.2"
 matplotlib = "3.7.3"
