--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,54 +1,43 @@
-[tool.poetry]
+[project]
 name = "rules-extraction"
 version = "0.0.2"
 description = "Rules extraction for eXplainable AI"
-authors = ["Arthur Babey <arthur.babey@heig-vd.ch>"]
-license = "3-Clause BSD License"
-readme = "README.md"
-homepage = "https://hes-xplain.github.io/"
-repository = "https://github.com/HES-XPLAIN/rules-extraction"
-keywords = ["machine learning", "xai"]
-classifiers=[
-    'Operating System :: Microsoft :: Windows',
-    'Operating System :: POSIX',
-    'Operating System :: Unix',
-    'Operating System :: MacOS',
-    'Intended Audience :: Developers',
-    'Intended Audience :: Education',
-    'Intended Audience :: Science/Research',
-    'License :: OSI Approved :: BSD License',
-    'Topic :: Scientific/Engineering',
-    'Topic :: Scientific/Engineering :: Mathematics',
-    'Topic :: Scientific/Engineering :: Artificial Intelligence',
-    'Programming Language :: Python :: 3',
+license = {text = "3-Clause BSD License" }
+authors = [
+    { name = "Arthur Babey", email = "arthur.babey@heig-vd.ch" }
 ]
-packages = [{include = "rules_extraction"}]
+dependencies = [
+    "numpy>=1.17.4",
+    "pandas==2.0.3",
+    "scikit-learn>=1.1.3",
+    "matplotlib==3.7.3",
+    "torchvision>=0.15.2",
+    "torch>=2.0.1",
+]
+readme = "README.md"
+requires-python = ">= 3.8.1"
 
-[tool.poetry.dependencies]
-python = "^3.8.1"
-numpy = "^1.17.4"
-pandas = "2.0.3"        # >= 2.1 requires Python 3.9
-scikit-learn = "^1.1.3"
-torch = { version = "2.0.1", source = "torch" }
-torchvision = "^0.15.2"
-matplotlib = "3.7.3"
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
-[tool.poetry.group.dev.dependencies]
-pre-commit = "^3.4.0"
-flake8 = "^6.1.0"
-black = "^23.9.1"
-coverage = "^7.3.1"
+[tool.rye]
+managed = true
+dev-dependencies = [
+    "pre-commit>=3.4.0",
+    "flake8>=6.1.0",
+    "black>=23.9.1",
+    "coverage>=7.3.1",
+    "sphinx>=6.2.1",
+    "sphinx-rtd-theme>=1.3.0",
+    "sphinx-autodoc-typehints>=1.22",
+]
 
+[tool.hatch.metadata]
+allow-direct-references = true
 
-[tool.poetry.group.doc.dependencies]
-sphinx = "^6.2.1"
-sphinx-rtd-theme = "^1.3.0"
-sphinx-autodoc-typehints = "^1.22"
-
-[[tool.poetry.source]]
-name = "torch"
-url = "https://download.pytorch.org/whl/cu117"
-priority = "supplemental"
+[tool.hatch.build.targets.wheel]
+packages = ["rules_extraction"]
 
 [tool.black]
 line-length = 88
@@ -62,7 +51,3 @@ exclude = '''
 profile = "black"
 line_length = 88
 multi_line_output = 3
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
