--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -21,27 +21,26 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Set up Poetry
-        run: pipx install poetry
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-          cache: 'poetry'
+          cache: 'pip'
 
       - name: Install Python dependencies
         run: |
-          poetry run python -m pip install -U pip
-          poetry install
+          python -m pip install -U pip
+          python -m pip install -r requirements-dev.lock
+
       - name: Generate docs
         run: |
-          poetry run sphinx-apidoc -o docs .
-          poetry run sphinx-build -b html docs docs/_build
+          sphinx-apidoc -o docs .
+          sphinx-build -b html docs docs/_build
+
       - name: Upload artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: artifact-sphinx
           path: docs/_build/
@@ -50,28 +49,27 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Set up Poetry
-        run: pipx install poetry
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-          cache: 'poetry'
+          cache: 'pip'
 
       - name: Install Python dependencies
         run: |
-          poetry run python -m pip install -U pip
-          poetry install
+          python -m pip install -U pip
+          python -m pip install -r requirements-dev.lock
+
       - name: Run coverage
         run: |
-          poetry run coverage run -m unittest discover
-          poetry run coverage html
+          coverage run -m unittest discover
+          coverage html
           rm htmlcov/.gitignore
+
       - name: Upload artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: artifact-coverage
           path: htmlcov/
@@ -81,16 +79,16 @@ jobs:
     needs: [ sphinx, coverage ]
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Download artifact (sphinx)
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: artifact-sphinx
           path: build/docs
 
       - name: Download artifact (coverage)
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: artifact-coverage
           path: build/cov
