--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,22 +24,23 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Set up Poetry
-        run: pipx install poetry
+        uses: actions/checkout@v4
 
       - name: Set up Python 🐍
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-          cache: 'poetry'
+          cache: 'pip'
 
       - name: Install Python dependencies
-        run: poetry install
+        run: |
+          python -m pip install -U pip
+          python -m pip install -r requirements.lock
 
       - name: Build binary wheel and source tarball 🔨
-        run: poetry build
+        run: |
+          python -m pip install build
+          python -m build
 
 #      - name: Publish distribution 📦 to Test PyPI
 #        uses: pypa/gh-action-pypi-publish@release/v1
