--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "matplotlib==3.7.3",
     "torchvision>=0.15.2",
     "torch>=2.0.1",
+    "build>=1.0.3",
 ]
 readme = "README.md"
 requires-python = ">= 3.8.1"
