--- a/.gitignore
+++ b/.gitignore
@@ -78,6 +78,7 @@ target/
 # Jupyter Notebook
 .ipynb_checkpoints
 rules_extraction/test.ipynb
+rules_extraction/test2.ipynb
 # IPython
 profile_default/
 ipython_config.py
