--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install -U pip
-          python -m pip install -r requirements.lock
+          python -m pip install -r requirements-freeze.txt
 
       - name: Run pre-commit checks
         uses: pre-commit/action@v3.0.0
