--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install -U pip
-          python -m pip install -r requirements.lock
+          python -m pip install -r requirements-freeze.txt
 
       - name: Build binary wheel and source tarball 🔨
         run: |
