--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install -U pip
-          python -m pip install -r requirements-dev.lock
+          python -m pip install -r requirements-freeze.txt
 
       - name: Generate docs
         run: |
@@ -60,7 +60,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install -U pip
-          python -m pip install -r requirements-dev.lock
+          python -m pip install -r requirements-freeze.txt
 
       - name: Run coverage
         run: |
