--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -19,6 +19,7 @@ permissions:
 jobs:
   sphinx:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -32,7 +33,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install -U pip
-          python -m pip install -r requirements-freeze.txt
+          python -m pip install .
 
       - name: Generate docs
         run: |
@@ -60,7 +61,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install -U pip
-          python -m pip install -r requirements-freeze.txt
+          python -m pip install .
 
       - name: Run coverage
         run: |
