--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ dependencies = [
     "numpy>=1.17.4",
     "pandas==2.0.3",
     "scikit-learn>=1.1.3",
-    "matplotlib==3.7.3",
+    "matplotlib>=3.7.3",
     "torchvision>=0.15.2",
     "torch>=2.0.1",
     "build>=1.0.3",
