--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = [
     { name = "Arthur Babey", email = "arthur.babey@heig-vd.ch" }
 ]
 dependencies = [
-    "numpy>=1.17.4",
+    "numpy>=1.17.4,<2.0.0",
     "pandas==2.0.3",
     "scikit-learn>=1.1.3",
     "matplotlib>=3.7.3",
